# pidget

./: .gitignore  Makefile  Makefile.am  README.md  config.yml  configure.ac  main.c
include/: common.h  config_parser.h  errors.h  image_proc.h  logger.h  pidget.h  xcb.h  xcb_errors.h
src/: Makefile.am  common.c  config_parser.c  image_proc.c  logger.c  main.c  pidget  pidget.c  xcb.c  xcb_errors.c
